# django_consulta_cep

./: .gitignore  README.md  pyproject.toml  requirements.txt
consulta_cep/: apps.py  urls.py  views.py
consulta_cep/templates/: base.html  index.html  modal.html  result.html
core/: settings.py  urls.py
