[tool.poetry]
name = "django-consulta-cep"
version = "0.1.0"
description = ""
authors = ["Sambiase <marsamb@gmail.com>"]
readme = "README.md"
packages = [{include = "django_consulta_cep"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
requests = "^2.28.2"
djlint = "^1.19.13"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
